# bactest-openclaw

./: .env.example  .gitignore  .replit  README.md  SAVE_COMPLETE_METADATA.py  backtest-name-search-styles.css  backtest_wrapper.py  backtester-script.js  backtester.html  backtester_engine_v3_0__6_.py  billing-script.js  billing.html  contact.html  dashboard-script.js  dashboard.html  faq.html  features.html  fix_timestamps.py  forgot-password.html  google_auth.py  how-it-works.html  index.html  landing.html  login.html  main-script.js  main-styles.css  main.py  models.py  my-backtests-script.js  my-backtests.html  notifications-script.js  notifications.html  options-backtest-result-detail-script.js  options-backtest-result-detail.html  options-backtest-results.html  options-script.js  options.html  options_backtester_v2_3_3_5.py  plans-script.js  plans.html  (+33 more)
migrations/: README.md
static/css/: main-styles.css  pricing.css  stock-backtester.css
static/js/: auth-utils.js  backtester-script.js  dashboard-script.js  main-script.js  notifications-script.js  options-backtest-result-detail-script.js  screener-script.js  stock-backtest-results-script.js  stock-backtester-script.js  subscription-script.js
templates/: pricing.html
tests/: test_app.py  test_models.py
